@startuml
title Diagrama de clases de análisis — clases representativas

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontSize 11
hide circle

skinparam class {
  BackgroundColor<<Controller>> #d5e8d4
  BorderColor<<Controller>> #82b366
  BackgroundColor<<Entity>> #dae8fc
  BorderColor<<Entity>> #6c8ebf
}

class GenerarCotizacionController <<Controller>> {
  + iniciarCotizacion(oportunidadId)
  + buscarTarifa(residuoId, destinoFinal, unidad)
  + calcularPrecioSugerido(tarifa, cantidad)
  + aplicarExcedente(cantidad, franquicia, importeExcedente)
  + crearBorradorCotizacion(items)
}

class GenerarOrdenServicioController <<Controller>> {
  + generarOrdenServicio(oportunidadId)
  + recopilarDatosOrden(oportunidadId)
}

class TarifaBase <<Entity>> {
  - residuoId
  - importeTransporte
  - importeDestinoFinal
  - franquicia
  - importeExcedente
  - unidadMedida
  - destinoFinal
  - activa
}

class Cotizacion <<Entity>> {
  - totalSugerido
  - totalFinal
  - estado
  - distanciaCalculada
  + recalcularTotalFinal()
}

class ItemCotizacion <<Entity>> {
  - precioSugerido
  - precioFinal
  - franquicia
  - ajusteManual
  - justificacionAjuste
  + registrarAjusteManual(precioFinal, justificacion)
}

class OrdenServicio <<Entity>> {
  - numeroRegistroSILC
  - dataExecucao
  - unidadeOperacional
  + validarDatosObligatorios()
}

GenerarCotizacionController --> TarifaBase : consulta
GenerarCotizacionController --> Cotizacion : crea
GenerarCotizacionController --> ItemCotizacion : crea

Cotizacion "1" *-- "1..*" ItemCotizacion : contiene

GenerarOrdenServicioController --> Cotizacion : consulta datos económicos
GenerarOrdenServicioController --> OrdenServicio : crea

@enduml